# Inventory-axum

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/handlers/: cakes.rs  categories.rs  mod.rs  products.rs
src/models/: cake.rs  category.rs  mod.rs  product.rs
